[gd_scene load_steps=2 format=3 uid="uid://dism4hjotn4pk"]

[ext_resource type="Script" path="res://UI/level_finish_screen.gd" id="1_lmytx"]

[node name="LevelFinishScreen" type="CanvasLayer"]
script = ExtResource("1_lmytx")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 0.266667)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -486.0
offset_top = 99.0
offset_right = 487.0
offset_bottom = 274.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 128
text = "Level Finished"
horizontal_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Completion Time:"

[node name="TimeLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "00:00:00"

[node name="BestTimeLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "New Best Time!"
uppercase = true

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Angels Killed:"

[node name="KillsLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "0"

[node name="BestKillsLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "New Best!"
uppercase = true

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Restarts:"

[node name="RestartsLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "0"

[node name="BestRestartsLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "New Fewest Restarts!"
uppercase = true

[node name="HBoxContainer4" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Deaths:"

[node name="DeathsLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "0"

[node name="BestDeathsLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "New Fewest Deaths!"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -180.985
offset_right = 320.0
offset_bottom = -79.985
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 128

[node name="QuitButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Quit
"

[node name="RestartButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Restart Level"

[node name="NextLevelButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Next Level"
